Ajustes finais parte 01